[package]
name = "fisherman"
version = "0.1.0"
authors = ["Joao Guilherme J. Marinho <gjmarinho.joao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"]}